[gd_scene load_steps=4 format=3 uid="uid://ctbrxtnjvr7a"]

[ext_resource type="Script" path="res://scenes/user_interface/views/pokemon_list_view/pokemon_list.gd" id="1_i4tmn"]
[ext_resource type="Script" path="res://scenes/user_interface/views/pokemon_list_view/team_list.gd" id="1_s2vrc"]
[ext_resource type="PackedScene" uid="uid://5n5iafd3nlv7" path="res://scenes/user_interface/views/main_view/components/pokemon_list_component/pokemon_list_component.tscn" id="2_acswg"]

[node name="PokemonListMargin" type="MarginContainer"]
custom_minimum_size = Vector2(320, 0)
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TeamBox" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
script = ExtResource("1_s2vrc")

[node name="Team0" type="TextureButton" parent="VBoxContainer/TeamBox"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="Team1" type="TextureButton" parent="VBoxContainer/TeamBox"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="Team2" type="TextureButton" parent="VBoxContainer/TeamBox"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="Team3" type="TextureButton" parent="VBoxContainer/TeamBox"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="PokemonList" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
script = ExtResource("1_i4tmn")
packed_list_item = ExtResource("2_acswg")

[connection signal="pressed" from="VBoxContainer/TeamBox/Team0" to="VBoxContainer/TeamBox" method="_on_click_pokemon" binds= [0]]
[connection signal="pressed" from="VBoxContainer/TeamBox/Team1" to="VBoxContainer/TeamBox" method="_on_click_pokemon" binds= [1]]
[connection signal="pressed" from="VBoxContainer/TeamBox/Team2" to="VBoxContainer/TeamBox" method="_on_click_pokemon" binds= [2]]
[connection signal="pressed" from="VBoxContainer/TeamBox/Team3" to="VBoxContainer/TeamBox" method="_on_click_pokemon" binds= [3]]
